--- a/CancerEconTutorial-ReadIndexMerge.rmd
+++ b/CancerEconTutorial-ReadIndexMerge.rmd
@@ -6,25 +6,27 @@ date: 2020-06-25
 output: html_document
 ---
 
-## Library Imports
+## Library Imports ## dplyr is loaded as a dependancy of tidyverse, not sure what 'here' is so i'll leave it by itself with supress
 These need to be run to import other libraries, or collections of functions writen by other people to make our jobs easier
 ```{r}
 suppressMessages(library(here))
-library(readxl)
-library(openxlsx)
-library(tidyverse)
-library(lubridate)
-library(dplyr)
-library(data.table)
+packages <- c("readxl","openxlsx","tidyverse","lubridate","data.table")
+new.packages <- packages[!(packages %in% installed.packages()[,"Package"])]
+if(length(new.packages)) install.packages(new.packages)
+```
+## setwd
+We need to make sure that R is looking in the right folder for both reading and writing of data and figures. We will use the command setwd() to acomplish. If at any time you want to see where R is looking, you can run the command getwd() inside the brackets of setwd(), put in quotes the folder you want to make R look at. For example, on a mac, running the command setwd("~/Desktop") would have R look at your desktop folder. The ~/ is a shortcut for the directory path to the user folder
+```{r}
+setwd=("your directory here!")
+getwd()
 ```
 
-## Read an Excel file and CSV file into separte dataframes `merged` and `country_codes`, respectively
+## Read an Excel file and CSV file into separte dataframes `merged` and `country_codes`, respectively. On the command we use to read the excel file, the text "readxl" before the :: denotes the library that the command comes from, while the "read_xlsx" that comes after is the function we are calling ## we don't need merged codes, allmerged already has the preprocessing it was used for done
 ```{r}
-merged <- read_excel(here::here("allmerged.xlsx"), sheet = 1, guess_max = 5000)
-country_codes <- read.csv(here::here("mergedcodes.csv"))
+merged <- readxl::read_xlsx(here::here("allmerged.xlsx"), sheet = 1, guess_max = 5000)
 ```
 ## Indexing and Assigning Variables:  Rename columns
-Let's see what the names of the columns in our `country_codes` dataframe look like:
+Let's see what the names of the columns in our `country_codes` dataframe look like: 
 ```{r}
 colnames(country_codes)
 ```
@@ -46,7 +48,7 @@ We can also drop columns we don't care about in anticipation of our merge later.
 ```{r}
 country_codes <- country_codes %>% select(Name, ISO3166)
 ```
-And now we can check our work:
+And now we can check our work: ## maybe a good spot to introduce head() 
 ```{r}
 colnames(country_codes)
 ```
@@ -75,7 +77,7 @@ And now we can look at our data frame and see that we've added the country names
 ```{r}
 merged
 ```
-Finally, we can write our changes back to disk:
+Finally, we can write our changes back to disk: ## do setwd() somewhere before this, default dir depends on installation I think but it's user/documents for me on win10 r3.6.3
 ```{r}
 write.csv(merged, file = here::here("merged_with_country_names.csv"), row.names = FALSE)
 ```
